GL/src/test/deca/context/valid/deca_sans_objet/exempleDecaSansObjet.deca
// Description:
//    test sans-objet fournit par le cahier de charge
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{ 
    int x ;
    x=readInt() ;
    println(0.5*(x*x)) ;
}